2013-06-10  Juanma Barranquero  <lekktu@gmail.com>

	* allout.el (allout-encryption-plaintext-sanitization-regexps):
	Fix make-variable-buffer-local call to refer to the correct variable.

2013-06-10  Aidan Gauland  <aidalgol@amuri.net>

	* eshell/em-term.el (eshell-visual-commands)
	(eshell-visual-subcommands, eshell-visual-options):
	Add summary line to docstrings.  Add cross-references.

2013-06-10  Glenn Morris  <rgm@gnu.org>

	* epa.el (epa-read-file-name): New function.  (Bug#14510)
	(epa-decrypt-file): Make plain-file optional.  Use epa-read-file-name.

2013-06-09  Aidan Gauland  <aidalgol@amuri.net>

	* eshell/em-term.el (eshell-visual-command-p): Fix bug that caused
	output redirection to be ignored with visual commands.

2013-06-09  Aidan Gauland  <aidalgol@amuri.net>

	* eshell/em-term.el (eshell-visual-command-p): New function.
	(eshell-term-initialize): Move long lambda to separate function
	eshell-visual-command-p.
	* eshell/em-dirs.el (eshell-dirs-initialise):
	* eshell/em-script.el (eshell-script-initialize):
	Add missing #' to lambda.

2013-06-08  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-add-log-current-defun): New function.
	(octave-mode): Set add-log-current-defun-function.
	(octave-goto-function-definition): Do not move point if not found.
	(octave-find-definition): Enhance to try subfunctions first.

2013-06-08  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-char-before)
	(byte-compile-backward-char, byte-compile-backward-word):
	Improve previous change, to handle non-explicit nil.

2013-06-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el: Improve show-paren-mode behavior.
	(smie--opener/closer-at-point): New function.
	(smie--matching-block-data): Use it.  Don't match from right after an
	opener or right before a closer.  Obey smie-blink-matching-inners.
	Don't signal a mismatch for repeated inners like "switch..case..case".

2013-06-07  Leo Liu  <sdl.web@gmail.com>
